[ UPDATE FooterLinks and DELETE PortfolioExampleLogin ]

--- a/src/app/components/template/footer/footer.component.html
+++ b/src/app/components/template/footer/footer.component.html
@@ -1,14 +1,25 @@
 <mat-toolbar id="contact">
     
     <img class="logo example-button" src="/assets/svg/logo.svg" alt="logotipo" (click)="scrollTo('home')"
-    matTooltip = "Voltar ao Topo" matTooltipPosition = "above" matTooltipClass="example-tooltip-red">
+    matTooltip="Voltar ao Topo" matTooltipPosition="above" matTooltipClass="example-tooltip-red">
 
     <ul>
-        <li class="linkedin"><a><img src="/assets/svg/media/linkedin.svg" alt="linkedin"></a></li>
-        <li class="github"><a><img src="/assets/svg/media/github.svg" alt="github"></a></li>
-        <li class="instagram"><a><img src="/assets/svg/media/instagram.svg" alt="instagram"></a></li>
-        <li class="facebook"><a><img src="/assets/svg/media/facebook.svg" alt="facebook"></a></li>
-        <li class="gmail"><a><img src="/assets/svg/media/gmail.svg" alt="gmail"></a></li>
+        <li class="linkedin"><a [href]="'https://www.linkedin.com/in/bruno-vieira-9574a519a/'" target="_blank"
+            matTooltip="Linkedin.com">
+            <img src="/assets/svg/media/linkedin.svg" alt="linkedin">
+            </a></li>
+        <li class="github"><a [href]="'https://github.com/vieirabc/'" target="_blank"
+            matTooltip="Github.com">
+            <img src="/assets/svg/media/github.svg" alt="github">
+            </a></li>
+        <li class="instagram"><a [href]="'https://www.instagram.com/the_life_of_vieirabc/'" target="_blank"
+            matTooltip="Instagram.com">
+            <img src="/assets/svg/media/instagram.svg" alt="instagram">
+            </a></li>
+        <li class="facebook"><a [href]="'https://www.facebook.com/brunoazeredocruz/'" target="_blank"
+            matTooltip="Facebook.com">
+            <img src="/assets/svg/media/facebook.svg" alt="facebook">
+            </a></li>
     </ul>
 
     <p class="follow-me">Siga-me nas redes!<i class="material-icons middle">sentiment_very_satisfied</i></p>
