--- a/src/app/components/template/footer/footer.component.scss
+++ b/src/app/components/template/footer/footer.component.scss
@@ -40,8 +40,8 @@
             }
         }
 
-        .linkedin, .gmail { transform: translateY(-15px); }
-        .github, .facebook { transform: translateY(-5px); }
+        .linkedin, .facebook { transform: translateY(-15px); }
+        .github, .instagram { transform: translateY(-5px); }
     }
 
     p {
