--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -6,5 +6,5 @@
     
     <p class="subtitle">{{ subtitle.text }}</p>
 
-    <img class="arrow" src="/assets/svg/arrow.svg" alt="rolar para baixo">
+    <img class="arrow" src="/assets/svg/arrow.svg" alt="rolar para baixo" (click)="scrollTo('about')">
 </section>
